<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="363dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_marginTop="20dp"
    android:id="@+id/itemCartCv"
    android:layout_height="152dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="35dp"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/foodNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_title"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_bold"/>
            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_marginTop="15dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/food_description"
                android:textSize="13sp"
                android:textColor="@color/text_item_color"/>
            <TextView
                android:id="@+id/priceTxt"
                android:layout_width="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:text="@string/food_price"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/price_item_color"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/foodIv"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:src="@drawable/cake_image"/>
        <FrameLayout
            android:id="@+id/minusFl"
            android:layout_width="44dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:layout_height="44dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ellipse"/>
            <View
                android:layout_width="22dp"
                android:layout_height="4dp"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center"/>
        </FrameLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>