<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/on_boarding_screen_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.welcome_screen.WelcomeScreenFragment">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="70dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="320dp" />
    <ImageView
        android:id="@+id/ellipseIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideLine"
        />
    <ImageView
        android:id="@+id/imageScreenIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome_sreen_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideLine"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sweet_ordering_app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideLineText" />

    <TextView
        android:id="@+id/textDescriptionText"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:text="@string/sweet_ordering_app_description"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStartedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginBottom="60dp"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_bold"
        android:backgroundTint="@color/on_boarding_screen_button_color"
        android:text="@string/sweet_ordering_screen_button_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>